# pepe

./: .cursorrules  .flake8  .gitignore  ARCHITECTURE.md  CLAUDE.md  CORRECTED_ANALYSIS.md  FINAL_STATUS_v0.6.md  FIXES_IMPLEMENTED.md  Leeme_JC.txt  OPERATIONS.md  POETRY_MIGRATION_GUIDE.md  POETRY_USAGE.md  PROJECT_STRUCTURE.md  README_NEW.md  README_SIMPLIFIED.md  READY_TO_TEST.md  STREAMLIT_SEARCH_FIX.md  agent.py  agentic_architecture_analysis.md  agentic_implementation_analysis.md  alembic.ini  app.py  batch_detect.py  chat_history.jsonl  classifier.py  cleanup_report_20250706_181634.json  db.py  debug_channel_resolver.py  debug_full_flow.py  demo_community_features.py  discord_messages.db  embed_store.py  fetch_messages.py  launch.sh  main.py  migrate_messages.py  mkdocs.yml  models.py  pepe-admin  pyproject.toml  (+23 more)
agentic/: __init__.py
architecture/: dependency_graph.md  env_vars.md
archive/: cleanup_summary_20250614_192711.json  enhanced_cleanup_summary_20250614_193013.json
core/: agent.py  agent_old.py  agentic_app.py  ai_client.py  app.py  batch_detect.py  bot.py  classifier.py  config.py  embed_store.py  enhanced_fallback_system.py  enhanced_k_determination.py  fetch_messages.py  mention_resolver.py  pipeline.py  preprocessing.py  query_capability_detector.py  rag_engine.py  rag_engine_old.py  repo_sync.py  repo_sync_backup.py  resource_detector.py  resource_detector_backup.py  resource_detector_simple.py
data/: bot_config.json  discord_messages_v2.json  enhanced_resources.db.backup_20250706_194258  fetching_checkpoint.json  fresh_resources.json  indexing_checkpoint.json  logging_config.json  optimized_fresh_resources.json  optimized_fresh_resources_backup.json  processed_resources.json  processed_resources_backup.json  resource_checkpoint.json  resources-data.json  resources.html  resources_export.json  resources_export_backup.json  resources_for_airtable.csv
db/: __init__.py  alembic.ini  db.py  models.py  query_logs.py
debug/: debug_discord_response.py  debug_search_filtering.py
docs/: 2025-05-11-project-architecture.md  AGENTIC_ARCHITECTURE.md  AGENT_SYSTEM_UPGRADE_COMPLETE.md  ALL_PROGRESS_BARS_SUMMARY.md  BRANCH_COMMIT_SUMMARY.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  COMPLETE_SYSTEM_UPGRADE_SUMMARY.md  DEPLOYMENT.md  DOCS_CLEANUP_ANALYSIS.md  EMBEDDING_DIMENSION_ANALYSIS.md  EMBEDDING_MODEL_MIGRATION.md  EMBEDDING_UPGRADE_COMPLETE.md  ENHANCED_K_DETERMINATION_FINAL_STATUS.md  FINAL_STRUCTURE.md  INCREMENTAL_FETCHING.md  LEGACY_PIPELINE_REMOVAL_COMPLETE.md  LLM_CONFIGURATION.md  LOGGING_GUIDE.md  MCP_MIGRATION_PLAN.md  MCP_SQLITE_INTEGRATION.md  OPERATIONS.md  ORGANIZATION.md  ORGANIZATION_COMPLETE.md  PHASE1_PHASE2_IMPLEMENTATION.md  PROGRESS_BARS_ENHANCEMENT.md  PROJECT_COMPLETION.md  PROJECT_STRUCTURE.md  PROMPT_ENGINEERING_IMPROVEMENTS.md  PYTHON_312_MCP_SQLITE_MIGRATION.md  QUALITY_IMPROVEMENTS_COMPLETE.md  QUICKSTART.md  (+24 more)
(+920 files in other folders)
